# DayiStegoSolver

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v4.0.0.md  RELEASE_NOTES_v4.5.0.md  RELEASE_NOTES_v4.5.1.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dayi/: __init__.py  __main__.py  cli.py  ctfshit_resolver.py  doctor.py  extraction.py  image_analysis.py  integrations.py  persona.py  plugin_inspector.py  reporter.py  runner.py  scanner.py  text_stego.py  wordlists.py
dayi/document/: __init__.py  detect.py  limits.py  model.py  opendocument.py  openxml.py  presentation.py  rtf.py  spreadsheet.py
dayi/tools/: __init__.py  _base.py  _opencv.py  _plugin.py  binwalk.py  chi_square.py  document_stego_scanner.py  exiftool.py  exiv2.py  lsb.py  ocr_scanner.py  ole_scanner.py  outguess.py  pcap_scanner.py  pdf_scanner.py  qr_scanner.py  steghide.py  stegseek.py  strings.py  text_stego_scanner.py  zip_cracker.py  zsteg.py
scripts/: check.sh  run_private_regression.py  validate_distribution.py
tests/: __init__.py  test_advanced_ocr.py  test_artifact_pipeline.py  test_artifact_scanner.py  test_bruteforce_phase_control.py  test_chi_square.py  test_cli_scan_command.py  test_corrective_hardening.py  test_corrective_hardening_round2.py  test_corrective_hardening_round3.py  test_corrective_hardening_round4.py  test_corrective_hardening_round5.py  test_corrective_hardening_round6.py  test_corrective_hardening_round7.py  test_ctfshit_cli.py  test_ctfshit_doctor.py  test_ctfshit_resolver.py  test_distribution_contents.py  test_doctor_command.py  test_document_stego.py  test_extended_document_stego.py  test_final_release_blockers.py  test_format_detection.py  test_image_analysis_reporting.py  test_integrations.py  test_mini_wordlist_decoder.py  test_notification_doctor.py  test_ocr_qr_doctor.py  test_ocr_scanner.py  test_ole_scanner.py  test_outguess_validation.py  test_package_metadata.py  test_pcap_scanner.py  test_pdf_scanner.py  test_plugin_registry.py  test_plugins_command.py  test_private_regression_harness.py  test_qr_scanner.py  test_readme_document_stego.py  test_readme_notifications.py  (+16 more)
