[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dayi-stego-solver"
version = "3.0.0"
description = "CTF Steganography Brute-force & Analysis CLI — 'Hallederiz Yeğenim' Edition"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ctf", "steganography", "stego", "security", "forensics", "ctfd", "jeopardy"]
authors = [
    { name = "MacallanTheRoot" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
]

# Core: zero mandatory external dependencies (pure stdlib).
# Optional: aiohttp enables Tier-2 CTFd/Discord fallback without ctfshit.
dependencies = []

[project.optional-dependencies]
integration = ["aiohttp>=3.9"]
ui = ["rich>=13.7"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10"]
pdf = ["pypdf>=4.0.0"]
ole = ["oletools>=0.60.1"]
pcap = ["scapy>=2.5.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
dayi = "dayi.cli:main"

[project.urls]
Repository = "https://github.com/MacallanTheRoot/testrepo"
"Bug Tracker" = "https://github.com/MacallanTheRoot/testrepo/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["dayi*"]
